# sql-agent-eval

./: JD.md  README.md  pyproject.toml
notebooks/: example.ipynb
sql_agent/: __init__.py  agent.py  database.py  tools.py
sql_agent/templates/: system_prompt.j2
