[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-agent"
version = "0.1.0"
description = "A natural language interface for SQL database operations using OpenAI"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "SQL Agent", email = "contact@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["sql", "database", "openai", "natural-language", "ai", "agent"]
requires-python = ">=3.7"
dependencies = [
    "sqlalchemy>=1.4.0",
    "sqlparse>=0.4.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "jinja2>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/sql-agent-eval"
Repository = "https://github.com/your-username/sql-agent-eval"
Issues = "https://github.com/your-username/sql-agent-eval/issues"

[tool.setuptools.packages.find]
include = ["sql_agent*"]

[tool.setuptools.package-data]
sql_agent = ["templates/*.j2"]